<resources>
    <string name="app_name">Bracketeer</string>
    <string name="new_tournament">Start a New Tournament</string>
    <string name="load_tournament">Load an Existing Tournament</string>
    <string name="tournament_type">Tournament Type:</string>
    <string-array name="tournament_types">
        <item>Single-Elimination</item>
        <item>Double-Elimination</item>
        <item>Swiss</item>
        <item>Round-Robin</item>
    </string-array>
    <string name="add">Add</string>
    <string name="players">Players:</string>
    <string name="enter_name">Enter Player Name</string>
    <string name="start_game">Start Game</string>
    <string name="single_elim">Single Elimination</string>
    <string name="default_round">Round 0</string>
    <string name="next_round">Next Round</string>
    <string name="save">Save</string>
    <string name="winner">WINNER</string>
    <string name="exit">Exit</string>
    <string name="congrats">Congratulations!</string>
    <string name="bye">Bye</string>
    <string name="end">End</string>
    <string name="first">First Place:</string>
    <string name="second">Second Place:</string>
    <string name="third">Third Place:</string>
</resources>
